# ghost_os

./: .gitignore  LICENSE  PRD.md  README.md  http_test.js  input.json  package-lock.json  package.json  progress.txt  run_exp.js  ws_test.js
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/commands/: index.ts  ps.ts
frontend/src/components/: BaseWindow.tsx  BootSequence.tsx  Dock.tsx  MemoryViewer.tsx  ProcessManager.tsx  SchedulerView.tsx  StatusBar.tsx  SyncVisualizer.tsx  Terminal.tsx  TerminalApp.tsx  WindowManager.tsx
frontend/src/store/: kernelStore.ts  windowStore.ts
frontend/src/types/: kernel.ts
kernel/: CMakeLists.txt
kernel/include/: memory.h  pcb.h  scheduler.h  sync.h  workload.h
kernel/src/: main.cpp  memory.cpp  pcb.cpp  scheduler.cpp  sync.cpp  workload.cpp
report/: charts.html
report/results/: experiment_results.json
scratch/: test_bridge.js  test_mem.cpp  test_sched.cpp  test_sync.cpp
server/: bridge.js  index.js  package-lock.json  package.json  test_client.js
